# freeDiameter

./: meson.build
extensions/: meson.build
extensions/acl_wl/: aw_conf.y  meson.build
extensions/dict_dcca/: dict_dcca.c
extensions/dict_dcca_3gpp/: add_avps.c  dict_dcca_3gpp.c  meson.build
extensions/dict_nasreq/: dict_nasreq.c
extensions/rt_default/: meson.build  rt_default-host.h.in  rtd_conf.y
extensions/rt_redirect/: meson.build
include/freeDiameter/: libfdproto.h  meson.build
libfdcore/: dict_base_proto.c  fdd.y  meson.build  p_psm.c  peers.c  sctp-internal.h  sctp.c  sctp_compat.c
libfdproto/: log.c
